# aerial

./: .editorconfig  CHANGELOG.md  LICENSE  README-template.md  README.md  docker_env  environment.yml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: conf.py  index.rst  installation_and_basic_usage.ipynb
examples/: collection.json
examples/EO_20190308.1618_11/: EO_20190308.1618_11.json
examples/EO_20190308.1618_12/: EO_20190308.1618_12.json
examples/EO_20190308.1618_13/: EO_20190308.1618_13.json
examples/EO_20190308.1618_14/: EO_20190308.1618_14.json
examples/EO_20190308.1618_15/: EO_20190308.1618_15.json
examples/EO_20190308.1618_16/: EO_20190308.1618_16.json
src/stactools/aerial/: __init__.py  commands.py  constants.py  image_metadata.py  stac.py  test_stac.py
tests/: __init__.py  test_commands.py  test_module.py  test_stac.py
